# coolc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
coolc/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  abort  build.sh
coolc/docs/: lex-and-yacc.txt  next-courses.txt
coolc/docs/week-7/: README.md
coolc/docs/week-9/: README.md
coolc/examples/: README.md
coolc/include/ast/: AST.h
coolc/src/: coolc.cpp  coolc.h
coolc/src/ast/: AST.cpp  AST.h  CMakeLists.txt
coolc/src/codegen/: CMakeLists.txt
coolc/src/codegen/arch/mips/: Assembler.cpp  Assembler.h  CodeGenMips.cpp  CodeGenMips.h  DataSection.cpp  DataSection.h
coolc/src/codegen/classes/: Klass.cpp  Klass.h
coolc/src/codegen/constants/: Constants.cpp  Constants.h
coolc/src/codegen/decls/: Runtime.cpp  Runtime.h
coolc/src/codegen/emitter/: CodeGen.cpp  CodeGen.h  CodeGen.inline.h
coolc/src/codegen/emitter/data/: Data.h  Data.inline.h
coolc/src/codegen/klass/: Klass.cpp  Klass.h
coolc/src/codegen/mips/: Assembler.cpp  Assembler.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  CodeGenMips.cpp  DataSection.cpp  DataSection.h  Makefile  SymbolTable.cpp  SymbolTable.h  SymbolTableMips.h
coolc/src/codegen/namespace/: NameSpace.cpp  NameSpace.h
coolc/src/codegen/runtime/: CMakeLists.txt  ObjectLayout.cpp  ObjectLayout.hpp  Runtime.cpp  Runtime.h  globals.cpp  globals.hpp
coolc/src/codegen/runtime/gc/: Allocator.cpp  Allocator.hpp  GC.cpp  GC.hpp  Marker.cpp  Marker.hpp  StackWalker.cpp  StackWalker.hpp  Utils.cpp  Utils.hpp
coolc/src/codegen/symnames/: NameConstructor.cpp  NameConstructor.h
coolc/src/codegen/symtab/: SymbolTable.h
coolc/src/decls/: Decls.cpp  Decls.h
coolc/src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Makefile  Token.cpp  Token.h
coolc/src/lexer/original/: cool.flex
coolc/src/lexer/token/: Token.cpp  Token.h
coolc/src/parser/: Makefile  Parser.cpp  Parser.h  Parser.inline.h  README.md
coolc/src/runtime/: CMakeLists.txt  ObjectLayout.cpp  Runtime.cpp  Runtime.h  globals.cpp  globals.hpp
coolc/src/runtime/gc/: Allocator.cpp  Allocator.hpp  GC.cpp  GC.hpp  Marker.cpp  Marker.hpp  StackWalker.cpp  StackWalker.hpp
coolc/src/runtime/gc/copying/: CopyingGC.cpp
coolc/src/runtime/gc/mark-compact/: MarkCompactGC.cpp
coolc/src/runtime/gc/mark-sweep/: MarkSweepGC.cpp
coolc/src/runtime/gc/stack-map/: StackMap.cpp  StackMap.hpp
coolc/src/semant/: CMakeLists.txt  Makefile  Scope.cpp  Scope.h  Semant.cpp  Semant.h
coolc/src/semant/scope/: Scope.cpp
coolc/src/utils/: CMakeLists.txt  Utils.cpp  Utils.h
coolc/src/utils/logger/: Logger.cpp  Logger.h
coolc/tests/: e2e.py
coolc/tests/apps/linked-list/: FibLinkedList.cl
coolc/tests/codegen/: make_results.sh  test.py
coolc/tests/codegen/arch/llvm/: run.sh
coolc/tests/codegen/arch/mips/: run.sh
coolc/tests/codegen/etalons/: abort.cl.result  book_list.cl.result  c.cl.result  copy-self-init.cl.result  dispatch-void-dynamic.cl.result  dispatch-void-static.cl.result  exp.cl.result  lam-gc.cl.result  multiple-dispatch.cl.result  multiple-static-dispatch.cl.result  newbasic.cl.result  scoping.cl.result  typename.cl.result
coolc/tests/codegen/mips/: start-spim.sh
coolc/tests/lexer/: make_results.sh  test.py
coolc/tests/parser/: test.py
coolc/tests/parser-semant/: make_results.sh  reference-coolc.sh
coolc/tests/parser-semant/end-to-end/: staticdispatchselftype.test
coolc/tests/parser-semant/etalons/: associativity+.test.result  associativitydiv.test.result  attrredefine.test.result  badfeatures.test.result  caseself.test.result  complex.test.result  dispatchonearg.test.result  existancetype4.test.result  formallists.test.result  hairyscary.cl.test.result  ifnested.test.result  inheritsbool.test.result  inheritsstring.test.result  letinitmultiplebindings.test.result  missingclass.test.result  multipleatdispatches.test.result  negtype.test.result  nottype.test.result  redefinedclass.test.result  redefinedobject.test.result  selftypecomplex.test.result  whileoneexpression.test.result
coolc/tests/parser/end-to-end/: badfeatures.test
coolc/tests/semant/: test.py
coolc/tests/semant/end-to-end/: cycle.test  existancetype.test  negtype.test
coolc/tests/src/: test.cpp  test.h
coolc/tests/src/codegen/: test.cpp
coolc/tests/src/lexer/: test.cpp
coolc/tests/src/parser-semant/: test.cpp
gc/: .gitignore  CMakeLists.txt  build.sh
gc/src/: workloads.cpp
gc/src/gc/: CMakeLists.txt
gc/src/gc/gc-impl/: alloca.cpp  alloca.inline.hpp  gc-common.cpp  gc-common.inline.hpp  globals.cpp  mark.cpp  mark.inline.hpp  object-desc.cpp  object.cpp  object.inline.hpp
gc/src/gc/gc-impl/mark-compact/: gc-mark-compact.inline.hpp
gc/src/gc/gc-impl/mark-sweep/: gc-mark-sweep-common.cpp  gc-mark-sweep.inline.hpp
gc/src/gc/gc-interface/: alloca.hpp  defines.hpp  gc.hpp  globals.hpp  mark.hpp  object-desc.hpp  object.hpp  stack.hpp
gc/src/workload/: CMakeLists.txt  linked-list-workloads.hpp  sanity-workloads.hpp  tests-support.hpp  workloads.cpp  workloads.hpp
src/codegen/: CMakeLists.txt
src/codegen/arch/llvm/emitter/: CodeGenLLVM.cpp  CodeGenLLVM.h
src/codegen/arch/llvm/klass/: KlassLLVM.cpp  KlassLLVM.h
src/codegen/arch/llvm/runtime/: RuntimeLLVM.cpp  RuntimeLLVM.h
src/codegen/arch/llvm/symtab/: SymbolTableLLVM.h
src/codegen/arch/mips/asm/: Assembler.cpp  Assembler.h
src/codegen/arch/mips/emitter/: CodeGenMips.cpp  CodeGenMips.h
src/codegen/arch/mips/klass/: KlassMips.cpp  KlassMips.h
src/codegen/arch/mips/runtime/: RuntimeMips.cpp  RuntimeMips.h
src/codegen/arch/mips/symtab/: SymbolTableMips.h
src/codegen/arch/myir/emitter/: CodeGenMyIR.cpp
src/codegen/arch/myir/ir/: DumpIR.cpp  IR.cpp  IR.hpp  IR.inline.hpp  Inst.cpp  Inst.hpp  Oper.hpp
src/codegen/constants/: Constants.h
src/codegen/decls/: Runtime.h
src/codegen/emitter/: CodeGen.h  CodeGen.inline.h
src/codegen/emitter/data/: Data.h  Data.inline.h
src/codegen/klass/: Klass.cpp  Klass.h
src/codegen/symnames/: NameConstructor.cpp  NameConstructor.h
src/codegen/symtab/: SymbolTable.h
(+322 files in other folders)
